--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,13 @@ button
     background-color: #ffe66b
     border: none
     cursor: pointer
+    transition: 0.5s all
+    outline: none
+    &:hover
+        background-color: pink
+    &:active
+        background-color: orange
+        
 
 .circle
     width: 50px
