--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box}button{width:250px;height:50px;background-color:#ffe66b;border:none;cursor:pointer}.circle{width:50px;height:50px;background-color:green;border-radius:100%;margin-top:10px}
+*{box-sizing:border-box}button{width:250px;height:50px;background-color:#ffe66b;border:none;cursor:pointer;transition:0.5s all}button:hover{background-color:pink}.circle{width:50px;height:50px;background-color:green;border-radius:100%;margin-top:10px}
